# dryad

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  dryad  dryad.sln  dryad.vcxproj  dryad_refactor.vcxproj  dryad_refactor_tests.vcxproj  dryad_test.vcxproj  makefile  package-lock.json  package.json  scoreLog.txt  tsconfig.json  tslint.json  utils.cmake  webpack.config.js
archive/2nd rewrite/: run.bat
dryad/: CMakeLists.txt  model.h
dryad/archive/1st rewrite/include/: composer.h  degreenode.h  dryadaliases.h  dryadutils.h  majormode.h  measure.h  melody.h  modegraph.h  note.h  phrase.h  voice.h
dryad/archive/1st rewrite/src/: degreenode.cpp  dryadrandom.cpp  dryadutils.cpp  majormode.cpp  measure.cpp  modegraph.cpp  note.cpp  phrase.cpp  voice.cpp
dryad/archive/1st rewrite/tests/: composertests.cpp  majormodetests.cpp  melodytests.cpp  phrasetests.cpp
dryad/archive/2nd rewrite/dryad/core/: .CMakeLists.txt.swp  motif_config.h  scale_config.h  utils.h
dryad/archive/2nd rewrite/tests/: model_tests.cpp
dryad/archive/3rd rewrite/: CMakeListsroot.txt
dryad/archive/3rd rewrite/model/: harmonynode.h  harmonynodegroup.h  motifvariation.h  progression.h
dryad/archive/3rd rewrite/model/traits/: listed.h
dryad/archive/4th rewrite/: constants.h  eventreducer.cpp  harmonyframe.cpp  harmonyframe.h  harmonystrategy.h  logging.h  result.h  score.cpp  score.h  scoreevent.h  scoreframe.h  scoretime.h  session.h  system.h
dryad/archive/original/src/: definitions.h  rules.h  score.h  todo.md
dryad/archive/original/tests/: MXLTestUtils.h
dryad/core/: core.cpp  core.h  harmony_graph.h  motif.h  note.h  phrase.h  voice.h
dryad/generation/: motif.h
dryad/model/: harmonygraph.h  score.h
dryad/src/: chord.cpp  chord.h  constants.h  containers.h  dryad.cpp  dryad.h  errors.cpp  errors.h  events.h  eventsummary.h  flag.h  graph.h  graph_io.cpp  graph_io.h  harmony.cpp  harmony.h  lockfreepool.h  log.h  logging.h  math.h  memory.h  motif.cpp  motif.h  motifstrategy.h  node.h  overrides.h  progression.h  random.h  result.h  scale.cpp  scale.h  score.cpp  score.h  scoregraph.h  scoretime.cpp  scoretime.h  serialize.h  session.cpp  session.h  templateutils.h  (+3 more)
gui/: CMakeLists.txt  imguiimplementation.h  imguiimplementation_sdl2opengl3.h  log.h  main.cpp
include/: bar.h  barlayout.h  composer.h  degreenode.h  dryadaliases.h  dryadcommon.h  dryaddefinitions.h  dryadinfo.h  dryadmacros.h  dryadrandom.h  dryadutils.h  includes.h  majorgraph.h  majormode.h  measure.h  melody.h  modegraph.h  motif.h  note.h  pattern.h  phrase.h  phraselayout.h  scale.h  song.h  voice.h
include/dryad/: definitions.h  log.h  model.h  types.h
juce_gui/: CMakeLists.txt
juce_gui/src/: DryadInterface.cpp  DryadInterface.h  Main.cpp  MainComponent.cpp  MainComponent.h  NodeGraphComponent.cpp  NodeGraphComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  TransportComponent.cpp  TransportComponent.h
prev_implementation/src/: chord.h  chordAnalysis.h  definitions.h  degree.h  harmonyAnalysis.h  main.cpp  measure.h  notes.h  pitch.h  ruleChecker.h  rules.h  scale.h  scaleAnalysis.h  score.h  scorePosition.h  scorePostProcessor.h  text.h  todo.md
prev_implementation/tests/: ChordAnalysisTest.h  IntervalAnalysisTest.h  MXLTestUtils.h  NotesAnalysisTest.h  RulesTest.h  ScaleAnalysisTest.h  template.h
refactoring/: default_scales.h  definitions.h  degree.h  dryad.h  harmony_graph.h  harmony_node.h  harmony_operations.cpp  harmony_operations.h  includes.h  measure.h  model.cpp  model_definitions.h  model_operations.cpp  model_operations.h  monitoring.h  motif.h  motif_energy.h  motif_variation.h  note.h  operations.cpp  operations.h  phrase.h  position.h  random.h  scale.h  scale_config.h  score.h  session.h  utils.cpp  utils.h  voice.h
refactoring_tests/: harmony_tests.cpp  model_tests.cpp
runtime/: build.bat  test.bat
runtime/archive/3rd rewrite/: CMakeLists.txt  init.bat  types.h
runtime/archive/3rd rewrite/export/: export.h
runtime/archive/3rd rewrite/generation/: progression.h
runtime/archive/3rd rewrite/model/: harmonynodegroup.h  measure.h  phrase.h  scale.h  scaleconfig.h  traits.h  voice.h
runtime/src/: chord.cpp  chord.h  constants.h  containers.h  edge.h  event.h  eventaccumulator.cpp  eventaccumulator.h  eventreducer.cpp  eventreducer.h  eventsummary.h  flags.h  fraction.h  graph.h  harmoniccontext.h  harmonicframe.cpp  harmonicframe.h  harmonictransition.h  harmonyframe.cpp  harmonyframe.h  main.cpp  (+33 more)
src/: BasicElements.ts  Beat.spec.ts  Beat.tests.ts  Beat.ts  Events.ts  Fraction.ts  Instant.ts  MusicalEvent.ts  Note.ts  RuleSet.ts  Rules.ts  Score.spec.ts  Score.ts  ScorePosition.ts  Utils.ts  Vex.ts  VexJsonValidator.ts  VexProcessor.ts  VexScore.ts  _main.ts  _sandbox.ts  analysis.h  bar.cpp  barlayout.cpp  chord.h  chordAnalysis.h  chords.h  composer.cpp  definitions.h  degree.h  degreenode.cpp  dryadrandom.cpp  dryadutils.cpp  event.h  harmonyAnalysis.h  harmonyAnalyzer.h  main.cpp  main.ts  majorgraph.cpp  majormode.cpp  (+28 more)
tests/: Beat.spec.ts  CMakeLists.txt  ChordAnalysisTest.h  Fraction.spec.ts  IntervalAnalysisTest.h  NotesAnalysisTest.h  RulesTest.h  ScaleAnalysisTest.h  Score.spec.ts  ScorePositionShould.h  ScorePositionTest.h  TestValues.h  barlayouttests.cpp  composertests.cpp  main.cpp  major_graph_test.cpp  majormodetests.cpp  melodytests.cpp  model_tests.cpp  phrasetests.cpp  template.h  tests.cpp
(+74 files in other folders)
